feat(AutocompleteService): enhance autocomplete suggestions with multi-strategy queries and improved error handling